<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/new_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:inputType="textLongMessage"
        android:hint="@string/product_name"/>

    <EditText
        android:id="@+id/new_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:inputType="numberDecimal"
        android:hint="@string/product_price"/>

    <EditText
        android:id="@+id/new_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:inputType="number"
        android:hint="@string/product_quantity"/>

    <EditText
        android:id="@+id/new_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:inputType="textLongMessage"
        android:hint="@string/supplier_name"/>

    <EditText
        android:id="@+id/new_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:inputType="phone"
        android:hint="@string/supplier_phone_number"/>

    <Button
        android:id="@+id/save_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/save"/>

    <TextView
        android:id="@+id/status_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:visibility="invisible" />

</LinearLayout>
