<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/detail_item_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp">

        <TextView
            android:id="@+id/detail_product_name"
            style="@style/textView_name" />

        <TextView
            android:id="@+id/detail_price"
            style="@style/textView_price" />

        <TextView
            android:id="@+id/detail_quantity"
            style="@style/textView_quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrease_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrease" />

            <Button
                android:id="@+id/increase_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increase" />

        </LinearLayout>

        <TextView
            android:text="Supplier:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/detail_supplier_name"
            style="@style/textView_supplier" />

        <LinearLayout
            android:id="@+id/phone_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_phone"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="8dp"
                android:src="@drawable/icon_phone" />

            <TextView
                android:id="@+id/detail_supplier_number"
                style="@style/textView_phone" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/detail_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

            <Button
                android:id="@+id/detail_reorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reorder" />

            <Button
                android:id="@+id/detail_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit" />

        </LinearLayout>


        <TextView
            android:id="@+id/detail_status_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:visibility="invisible" />


    </LinearLayout>

</ScrollView>